# StockShotGun

./: .gitignore  CLAUDE.md  LICENSE  README.md  brokers.py  init.py  main.py  order_processor.py  pyproject.toml  requirements.txt  setup.py  stockshotgun  tui.py
brokers/: __init__.py  base.py  bbae.py  dspac.py  fennel.py  firstrade.py  public.py  robinhood.py  schwab.py  session_manager.py  sofi.py  tastytrade.py  tradier.py  webull.py  wellsfargo.py
scripts/: verify.sh
src/: __init__.py  automation_recap.py  cli_runtime.py  main.py  order_processor.py  setup.py  sweep.py
src/brokers/: __init__.py  base.py  bbae.py  browser_utils.py  chase.py  dspac.py  fennel.py  firstrade.py  public.py  robinhood.py  schwab.py  session_manager.py  sofi.py  tastytrade.py  tradier.py  webull.py  wellsfargo.py
src/tui/: __init__.py  app.py  broker_functions.py  config.py  holdings_view.py  input_handler.py  response_handler.py  session_cache.py  widgets.py
tests/: test_sweep.py
tui/: __init__.py  app.py  broker_functions.py  config.py  holdings_view.py  input_handler.py  order_processor.py  response_handler.py  widgets.py
